[tool.poetry]
name = "video-to-image"
version = "0.1.1"
description = "Simple tool to make images from video."
authors = ["IZomBie <patrik009009@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
